View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025698 | Community | OCCT:Modeling Algorithms | public | 2015-01-12 18:43 | 2021-12-13 14:59 |
Reporter | Istvan Csanady | Assigned To | bugmaster | ||
Priority | normal | Severity | feature | ||
Status | closed | Resolution | duplicate | ||
Target Version | 7.6.0 | ||||
Summary | 0025698: Modeling Algorithms - Implementation of progress feedback in pave filler | ||||
Description | Progress indication is not implemented in BOPAlgo_PaveFiller. I created an implementation. See the attached patch. | ||||
Steps To Reproduce | Not needed. | ||||
Tags | No tags attached. | ||||
Test case number | |||||
related to | 0025748 | closed | Open CASCADE | Foundation Classes - Parallel version of progress indicator |
|
patch.diff (3,522 bytes) |
|
patch2.diff (843 bytes) |
|
Both patches needed. |
|
Branch CR25698 has been created by msv. SHA-1: b0e6fe32e260d7115f60f70cf7d95e7df6102989 Detailed log of new commits: Author: Istvan Csanady Date: Mon Jan 12 16:40:00 2015 +0100 0025698: Implementation of progress feedback in pave filler |
|
Dear pkv, please review the branch CR25698. |
|
1. Replace the pieces of code ... if (!myProgressIndicator.IsNull()) { myProgressIndicator->NewScope(100.0); myProgressIndicator->SetStep(100.0 / 16.0); } ,,, if (!myProgressIndicator.IsNull()) { myProgressIndicator->Increment(); } ... if (!myProgressIndicator.IsNull()) { myProgressIndicator->Increment(); myProgressIndicator->EndScope(); } ... by methods that control the indicator. Say, BOPAlgo_PaveFiller::IndicatorStart () BOPAlgo_PaveFiller::IndicatorIncrement () BOPAlgo_PaveFiller::IndicatorStop (). Place the methods in a separate file [say BOPAlgo_PaveFiller_11.cxx] The reasons: - keep the one functionality in one place is easy to maintain and modify - keep the control program out of details 2. Why the steps myDS->UpdatePaveBlocks(); RefineFaceInfoOn(); are out of IndicatorIncrement () 3. Why the all steps have equal complexity? The complexity of a step depends on data. It would be nice to have the analysis of data inside the code. The analysis will allow to distribute the complexity of steps more correctly 4. It will be good to have a test command and several test cases to see how it works. These tools are absolutely necessary to identify the problems associated with Progress Indicator in context of BOPAlgo_PaveFiller: - The Draw command is needed. - Steps To Reproduce is needed. - Test cases are needed. |
|
Dear pkv, I see that this task is not so simple as seemed. So, please, put it in your list of tasks. |
|
The issue shall be reconsidered following integration of 0025748 |
|
This issue will be fixed with "21264 - Progress indicator for Boolean operations". |
|
Please close this bug as duplicate of #21264. |
|
Branch CR25698 has been deleted by kgv. SHA-1: b0e6fe32e260d7115f60f70cf7d95e7df6102989 |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-01-12 18:43 | Istvan Csanady | New Issue | |
2015-01-12 18:43 | Istvan Csanady | Assigned To | => msv |
2015-01-12 18:43 | Istvan Csanady | File Added: patch.diff | |
2015-01-12 18:57 | Istvan Csanady | File Added: patch2.diff | |
2015-01-12 18:57 | Istvan Csanady | Note Added: 0035978 | |
2015-04-09 15:32 | git | Note Added: 0039501 | |
2015-04-09 15:32 |
|
Status | new => assigned |
2015-04-09 15:34 |
|
Note Added: 0039502 | |
2015-04-09 15:34 |
|
Assigned To | msv => pkv |
2015-04-09 15:34 |
|
Status | assigned => resolved |
2015-04-09 15:34 |
|
Steps to Reproduce Updated | |
2015-04-14 09:02 |
|
Note Added: 0039665 | |
2015-04-14 09:03 |
|
Assigned To | pkv => msv |
2015-04-14 09:03 |
|
Status | resolved => assigned |
2015-04-15 12:07 |
|
Assigned To | msv => pkv |
2015-04-15 12:09 |
|
Note Added: 0039762 | |
2015-04-15 12:09 |
|
Target Version | 6.9.0 => 7.1.0 |
2015-04-17 10:02 |
|
Note Edited: 0039665 | |
2016-10-28 18:56 |
|
Assigned To | pkv => msv |
2016-10-28 18:56 |
|
Target Version | 7.1.0 => 7.2.0 |
2017-07-21 11:22 |
|
Target Version | 7.2.0 => 7.3.0 |
2017-12-05 17:09 |
|
Target Version | 7.3.0 => 7.4.0 |
2019-08-12 16:44 |
|
Target Version | 7.4.0 => 7.5.0 |
2020-09-14 22:55 |
|
Target Version | 7.5.0 => 7.6.0 |
2020-09-18 21:48 |
|
Relationship added | related to 0025748 |
2020-09-18 21:52 |
|
Note Added: 0095056 | |
2020-09-18 21:54 |
|
Assigned To | msv => emv |
2020-11-18 11:44 | kgv | Summary | Implementation of progress feedback in pave filler => Modeling Algorithms - Implementation of progress feedback in pave filler |
2020-11-18 11:44 | kgv | Severity | minor => feature |
2021-03-05 11:23 |
|
Assigned To | emv => akaftasev |
2021-08-29 19:14 |
|
Note Added: 0103516 | |
2021-08-29 19:15 |
|
Note Added: 0103517 | |
2021-08-29 19:15 |
|
Assigned To | akaftasev => bugmaster |
2021-08-29 19:15 |
|
Status | assigned => feedback |
2021-08-29 19:15 |
|
Resolution | open => duplicate |
2021-09-03 14:09 | bugmaster | Status | feedback => closed |
2021-12-13 14:59 | git | Note Added: 0105893 |