0025698: Implementation of progress feedback in pave filler